(add) Add issue covers in Home

--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -1,33 +1,71 @@
-$main: #006060;
-
-
+$themeColor: #006060;
+$breakMedium: 600px;
+$breakLarge: 800px;
 .home {
-  
+  max-width: 1200px;
+  margin: 0 auto;
 }
-.masthead {
-  background: #d3d3d3;
-  color: white;
+.pageTitle {
   text-align: center;
-  h1 {
-    color: $main;
-    font-size: 4em;
+  font-size: 40px;
+  padding: 15px 0;
+  margin: 35px 0 15px 0;
+  color: $themeColor;
+}
+.coverItem, .coverItem:visited {
+  text-decoration: none;
+  display: block;
+
+  padding: 10px 10px 36px 10px;
+  height: 100%;
+  width: 100%;
+
+  border-radius: 5px;
+  overflow: hidden;
+
+  display: inline-block;  
+  margin: 2.5% 1.5%;
+  color: black;
+}
+a.coverItem, a.coverItem:visited {
+  background: #fff;
+  cursor: pointer;
+  box-shadow: 3px 3px 0px #ccc;
+}
+@media all and (min-width: $breakMedium) and (max-width: $breakLarge){
+  .coverItem, .coverItem:visited {
+      width: 47%;
+      
   }
-  h2 {
-    color: #ddd;
-    font-size: 2em;
-    margin: 20px;
+}
+@media all and (min-width: $breakLarge){
+  .coverItem, .coverItem:visited {
+      width: 30%;
+      
   }
-  a {
-    color: #ddd;
-  }
-  p {
-    margin: 10px;
-  }
-  
-  
 }
 
-.counterContainer {
+a.coverItem:hover {
+  background: #d9d9d9;
+}
+.coverImg {
+  width: 98%;
+  display: block;
+  margin: 0 auto 8px auto;
+  border-radius: 5px;
+}
+.coverTitle {
+  color: #b88234;
+  font-size: 24px;
+  margin: 10px 0;
+  font-weight: 800;
+}
+
+.comingText {
+  padding: 35% 0;
   text-align: center;
-  margin: 20px;
+  border: 6px dotted #ccc;
+  border-radius: 5px;
+  font-size: 28px;
+  color: #797979;
 }
